[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-harvest-ie-tests"
version = "0.1.0"
description = "End-to-end and integration tests for the StellarHarvest Insight Engine pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Machine Learning Maverick", email = "github@machinelearningmaverick.com" },
]
dependencies = [
    "stellar-harvest-ie-config",
    "stellar-harvest-ie-models",
    "stellar-harvest-ie-stream",
    "stellar-harvest-ie-store",
    "stellar-harvest-ie-producers",
    "stellar-harvest-ie-consumers",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stellar_harvest_ie_tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -q --disable-warnings --strict-markers"
log_cli = true
log_cli_level = "DEBUG"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-mock>=3.10.0",
    "testcontainers[kafka,postgres]>=3.7.0",
]
