[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-harvest-ie-tests"
version = "0.1.0"
description = "End-to-end and integration tests for the StellarHarvest Insight Engine pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Machine Learning Maverick", email = "github@machinelearningmaverick.com" },
]
dependencies = [
    "stellar-harvest-ie-config>=0.1.2",
    "stellar-harvest-ie-models>=0.3.1",
    "stellar-harvest-ie-stream>=0.1.2",
    "stellar-harvest-ie-store>=0.1.2",
    "stellar-harvest-ie-producers>=0.2.3",
    "stellar-harvest-ie-consumers>=0.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["stellar_harvest_ie_tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-s -q --disable-warnings --strict-markers"
log_cli = true
log_cli_level = "DEBUG"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[kafka,postgres]>=3.7.0",
]
